installation-tests.yml: Fix path to local gh action
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -32,7 +32,7 @@ jobs:
           path: .ssh
           if-no-files-found: error
       - id: create-test-instance
-        uses: .github/actions/create-test-instance
+        uses: ./.github/actions/create-test-instance
         with:
           version: "${{ github.event.inputs.tag || github.ref_name || github.head_ref }}"
           uid: "${{ github.run_id }}-install"
