installation-tests.yml: Create .ssh directory before generating keys
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           set -x
+          mkdir -p ./.ssh
           ssh-keygen -t ed25519 -f ".ssh/automation_ssh_key"
       - name: upload ssh private key as artifact
         uses: actions/upload-artifact@v3
