installation-tests.yml: Fix git fetch syntax
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -54,7 +54,7 @@ jobs:
         id: find-version
         run: |
           set -x
-          git fetch -f origin ${{ github.ref }}:${{ github.ref }}
+          git fetch origin -f --tags
           version="$(git describe --tags)"
           [[ "$version" =~ *-*-* ]] || {
             git checkout HEAD~1
