installation-tests.yml: Fix git describe command
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           set -x
           git fetch origin -f --tags
-          version="$(git describe --tags)"
+          version="$(git describe --tags --always)"
           [[ "$version" =~ *-*-* ]] || {
             git checkout HEAD~1
             version="$(git describe --tags)"
