installation-tests.yml: Checkout before checking version
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -58,8 +58,9 @@ jobs:
           set -x
           echo "${GIT_REF}"
           env
+          git checkout "$GIT_REF"
           git fetch origin -f --tags
-          version="$(git describe --tags --always)"
+          version="$(git describe --tags)"
           [[ "$version" =~ *-*-* ]] || {
             git checkout HEAD~1
             version="$(git describe --tags)"
