installation-tests.yml: Try force fetching
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -50,8 +50,6 @@ jobs:
       GIT_REF: "${{ github.event.inputs.tag || github.ref_name || github.head_ref }}"
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 10
       - shell: bash
         id: find-version
         run: |
@@ -59,7 +57,7 @@ jobs:
           echo "${GIT_REF}"
           env
           git checkout "$GIT_REF"
-          git fetch origin -f --tags
+          git fetch -fu origin ${{ github.ref }}:${{ github.ref }}
           version="$(git describe --tags)"
           [[ "$version" =~ *-*-* ]] || {
             git checkout HEAD~1
