installation-tests.yml: Try force fetching
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -57,7 +57,7 @@ jobs:
           echo "${GIT_REF}"
           env
           git checkout "$GIT_REF"
-          git fetch -fu origin ${{ github.ref }}:${{ github.ref }}
+          git fetch -fu --tags origin ${{ github.ref }}:${{ github.ref }}
           version="$(git describe --tags)"
           [[ "$version" =~ *-*-* ]] || {
             git checkout HEAD~1
