--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -50,6 +50,8 @@ jobs:
       GIT_REF: "${{ github.event.inputs.tag || github.ref_name || github.head_ref }}"
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - shell: bash
         id: find-version
         run: |
