vm-tests.yml: Fix deprecated variable usage
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -175,8 +175,8 @@ jobs:
           source ./library.sh
   
           echo "Updating from $PREVIOUS_VERSION to $GIT_REF"
-          ssh-keygen -f "$HOME/.ssh/known_hosts" -R "${ipv4_address}" 2> /dev/null
-          ssh -o "StrictHostKeyChecking=no" "root@${ipv4_address}" "ncp-update '$GIT_REF'"
+          ssh-keygen -f "$HOME/.ssh/known_hosts" -R "${SERVER_ADDRESS}" 2> /dev/null
+          ssh -o "StrictHostKeyChecking=no" "root@$${SERVER_ADDRESS}" "ncp-update '$GIT_REF'"
           
           trap 'terminate-ssh-port-forwarding "${SERVER_ADDRESS}"' EXIT 1 2
           
