vm-tests.yml: Split update and integration test in separate steps

--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -162,22 +162,23 @@ jobs:
       - name: download ssh private key as artifact
         uses: actions/download-artifact@v3
         with:
-          name: ${{ github.run-id }}-install-ssh-privkey
+          name: ${{ github.run-id }}-update-ssh-privkey
           path: .ssh
-      - name: Test postinstall VM
+      - name: perform update
         run: |
           set -ex
           chmod 0600 ./.ssh/automation_ssh_key
           eval "$(ssh-agent)"
           ssh-add ./.ssh/automation_ssh_key
-          
-          cd bin
-          source ./library.sh
-  
+
           echo "Updating from $PREVIOUS_VERSION to $GIT_REF"
           ssh-keygen -f "$HOME/.ssh/known_hosts" -R "${SERVER_ADDRESS}" 2> /dev/null || true
           ssh -o "StrictHostKeyChecking=no" "root@${SERVER_ADDRESS}" "ncp-update '$GIT_REF'"
-          
+      - name: Run integration tests
+        run: |
+          cd bin
+          source ./library.sh
+            
           trap 'terminate-ssh-port-forwarding "${SERVER_ADDRESS}"' EXIT 1 2
           
           setup-ssh-port-forwarding "$SERVER_ADDRESS"
