--- a/.github/actions/create-test-instance/action.yml
+++ b/.github/actions/create-test-instance/action.yml
@@ -10,6 +10,10 @@ inputs:
   hcloud_token:
     description: A auth token for Hetzner cloud
     required: true
+  server_type:
+    description: Server type to use for hetzner servers
+    required: true
+    default: "cx11"
 
 outputs:
   server_address:
