action.yml: Fix server_type parameter not being applied
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/actions/create-test-instance/action.yml
+++ b/.github/actions/create-test-instance/action.yml
@@ -29,6 +29,7 @@ runs:
   env:
     HCLOUD_TOKEN: ${{ inputs.hcloud_token }}
     UID: ${{ inputs.uid }}
+    SERVER_TYPE: ${{ inputs.server_type }}
   args:
     - /ncp-test-automation/bin/actions/create-test-instance.sh
     - ${{ inputs.version }}
