vm-tests.yml: Add debug output
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -279,6 +279,7 @@ jobs:
         if: ${{ contains('success|failure', matrix.test_result) }}
         shell: bash
         run: |
+          set -x
           cd /ncp-test-automation/bin
           
           . ./library.sh
