--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -245,12 +245,12 @@ jobs:
             server_address: ${{ needs.setup-installation-test-instance.outputs.server_address }}
             test_result: ${{ needs.setup-installation-test-instance.result }}
             test_server_id: ${{ needs.setup-installation-test-instance.outputs.test_server_id }}
-            version: ${{ needs.setup-installation-test-instance.version }}
+            version: ${{ needs.setup-installation-test-instance.outputs.version }}
           - test_type: update
             server_address: ${{ needs.setup-update-test-instance.outputs.server_address }}
             test_result: ${{ needs.setup-update-test-instance.result }}
             test_server_id: ${{ needs.setup-update-test-instance.outputs.test_server_id }}
-            version: ${{ needs.setup-update-test-instance.version }}
+            version: ${{ needs.setup-update-test-instance.outputs.version }}
       fail-fast: false
 
     env:
